# valve

./: .Rbuildignore  .gitattributes  .gitignore  Cargo.toml  DESCRIPTION  Dockerfile  LICENSE  LICENSE.md  LICENSE.note  NAMESPACE  NEWS.md  README.md  TODO  _pkgdown.yml  paper.md  plumber.R
.github/: FUNDING.yml
R/: extendr-wrappers.R  utils.R  valve-write-vetiver.R  valve_run.R
docs/: 404.html  LICENSE-text.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
docs/articles/: Deploy-with-DigitalOcean.html  Using-Valve-with-Docker.html  index.html
docs/news/: index.html
docs/reference/: index.html  valve_run.html  valve_write_vetiver.html
inst/: Dockerfile  bench-do-minimal.yml  bench-sleep-plumber.yml  bench-sleep-valve.yml  sleep.R  test-install.R  valve  vetiver-model.R
inst/docker/: Dockerfile
inst/minimal-docker/: Dockerfile  plumber.R
inst/plumber/mtcars-lm/: plumber.R
inst/test-r-universe/: Dockerfile
inst/vetiver/: Dockerfile  bench-plumber.yml  bench-valve.yml  entrypoint.sh  plumber.R
inst/vetiver/cars_linear/20230524T221439Z-455fc/: data.txt
inst/vetiver/cars_linear/20230709T200220Z-455fc/: cars_linear.rds  data.txt
inst/vetiver/netflix/netflix_descriptions/20230529T000622Z-9b2fa/: data.txt  netflix_descriptions.rds
man/: valve_run.Rd  valve_write_vetiver.Rd
pkgdown/: extra.scss
src/: Makevars  Makevars.win  entrypoint.c  lib.rs  main.rs  start.rs  valve-win.def
src/rust/: Cargo.toml  TODO  WHATIVELEARNED  dist-workspace.toml
src/rust/src/: lib.rs  main.rs  plumber.rs  pooling.rs  shiny.rs  start.rs
src/rust/src/start/: mod.rs  start_plumber.rs  start_shiny.rs
vignettes/articles/: Deploy-with-DigitalOcean.Rmd  Using-Valve-with-Docker.Rmd
