[package]
name = "valve-rs"
version = "0.1.2"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/JosiahParry/valve"
description = "Auto-scale R {plumber} APIs concurrently using Tokio, Axum, and Deadpool"
homepage = "https://valve.josiahparry.com"
exclude = ["TODO", "WHATIVELEARNED"]
readme = "../../README.md"

[lib]
name = "valve"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "valve"
path = "src/main.rs"


[dependencies]
argh = "0.1.10"
axum = { version = "0.6.18", features = ["tokio"]}
hyper = { version = "0.14.26", features = ["client"] } 
rand = "0.8.5"
tokio = { version = "1.28.1", features = ["io-util", "macros", "rt-multi-thread", "signal"] }
extendr-api = {version = '0.4.0', optional = true }
deadpool = "0.9.5"
async-trait = "0.1.68"

[features]
default = ["rlib"]
rlib = ["dep:extendr-api"]